# ros_translator

./: .gitignore  .gitmodules  Development.yaml  Dockerfile.ros_bridge  Dockerfile.ros_master  FASCarE.yaml  Makefile  NGCFASCar.yaml  README.md  bridged_msgs.txt  docker-compose.yaml  generate_bridge_messages.sh  mapping_rules.yaml  normalize_msg_files.py  ros_translator.mk
bridge_workspace/: bridged_msgs.txt  build_all.sh  build_packages.sh  build_ros1_bridge.sh  check_ros_master.sh  patch_ros1_bridge.sh  print_pairs.sh  prune_empty_packages.sh  prune_msgs.sh  run_ros1_bridge.sh
bridge_workspace/src/template/: CMakeLists.txt  package.xml  requirements.cmake
bridge_workspace/src/template_minimal/: CMakeLists.txt  mapping_rules.yaml  requirements.cmake
files/: build_ros1_bridge.sh  build_ros_noetic.sh  ros-master_entrypoint.sh  ros1.env  ros1_bridge.env  ros2.env  ros_bridge_entrypoint.sh  ros_custom_packages_inspect.sh  ros_translator_heartbeat_entrypoint.sh
ros1_packages/: README.md
